<resources>
    <string name="app_name">TiendaVehiculos</string>
    <string name="servidor">http://192.168.17.1:9001/appVehiculos/</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Venta de Vehiculos</string>
    <string name="nav_header_subtitle">Encuentra tu Carro</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Direccion</string>
    <string name="usuario">Usuario</string>
    <string name="email">Email</string>
    <string name="celular">Celular</string>
    <string name="contrase_a">Contraseña</string>
    <string name="todo">TODO</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_actividad_principal">ActividadPrincipal</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarme">Registrarme</string>
    <string name="nombresPerfil">Nombres:</string>
    <string name="apellidosPerfil">Apellidos:</string>
    <string name="nombre_de_usuarioPerfil">Nombre del Usuario:</string>
    <string name="e_mailPerfil">E-mail:</string>
    <string name="contrase_aPerfil">Contraseña:</string>
    <string name="direccionPerfil">Dirección:</string>
    <string name="celularPerfil">Celular:</string>
    <string name="telefonoPerfil">Teléfono:</string>
    <string name="editar">Editar</string>
    <string name="imagen">imagen</string>
    <string name="title_activity_detalle_vehiculo">DetalleVehiculo</string>
    <string name="title_activity_detalle_vendedor">DetalleVendedor</string>
    <string name="title_activity_registrar_vehiculo">RegistrarVehiculo</string>
    <string name="modelo">Modelo</string>
    <string name="editarperfil">Editar Perfil</string>
</resources>
