<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:gravity="center"
    android:background="@color/fondoGris"
    tools:context=".fragments.PerfilUsuarioFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >


            <ImageView
                android:id="@+id/imagenUsuario"
                android:layout_width="133dp"
                android:layout_height="122dp"
                android:layout_gravity="center"
                android:layout_marginVertical="30dp"
                android:contentDescription="@string/imagen" tools:targetApi="o" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/etiquetaNombres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/nombresPerfil"
                    />

                <TextView
                    android:id="@+id/nombres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nombre"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/etiquetaApellidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/apellidosPerfil" />

                <TextView
                    android:id="@+id/apellidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Apellidos"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/EtiquetaUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/nombre_de_usuarioPerfil" />

                <TextView
                    android:id="@+id/nombreUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Usuario"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/etiquetaEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/e_mailPerfil" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="E-mail"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >
                <TextView
                    android:id="@+id/etiquetaContrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/contrase_aPerfil" />

                <TextView
                    android:id="@+id/contrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contraseña" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >
                <TextView
                    android:id="@+id/etiquetaDireccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/direccionPerfil" />

                <TextView
                    android:id="@+id/direccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dirección"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/etiquetaCelular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/celularPerfil" />

                <TextView
                    android:id="@+id/celular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Celular"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/etiquetaTelefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/telefonoPerfil" />

                <TextView
                    android:id="@+id/telefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Teléfono" />
            </LinearLayout>

            <Button
                android:id="@+id/botoneditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/editar" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>